<resources>
    <string name="app_name">navigation menu</string>
    <string name="host_title">업무별 담당자</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">인사과</string>
    <string name="tab_text_2">정보과</string>
    <string name="tab_text_3">군수과</string>
    <string name="tab_text_4">작전과</string>
    <string name="tab_text_5">1소대</string>
    <string name="tab_text_6">2소대</string>
    <string name="tab_text_7">3소대</string>

    <string name="menu_home">홈</string>
    <string name="menu_calender1">부대일정</string>
    <string name="menu_results">일일결산</string>
    <string name="menu_tools">근무표</string>
    <string name="menu_host">업무별담당자</string>
    <string name="menu_gallery">부대활동</string>
    <string name="menu_calender2">청소/빨래달력</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="여단지침">여단지침</string>
    <string name="군단지침">군단지침</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="textview1">중령 가나다</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="textview2">대위 라마바</string>
    <string name="textview3">상사 아자차</string>
    <string name="textview4">하사 타파하</string>
    <string name="want1">1. 군단지침 1번입니다.</string>
    <string name="want2">2. 군단지침 2번입니다.</string>
    <string name="want3">3. 군단지침 3번입니다.</string>
    <string name="want4">1.여단지침 1번입니다.</string>
    <string name="want5">2. 여단지침 2번입니다.</string>
    <string name="want6">3. 여단지침 3번입니다.</string>
    <string name="todo10">TODO10</string>
    <string name="todo11">TODO11</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO13</string>
    <string name="login_name">Login Activity</string>
    <string name="prompt_number">군번을 입력해 주십시오.</string>
    <string name="prompt_password">패스워드를 입력해 주십시오.</string>
    <string name="action_sign_in">확인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">맞지않거나 유효하지 않은 군번입니다.</string>
    <string name="invalid_password">맞지않는 비밀번호입니다.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Title">부대R리미</string>
    <string name="설명1">아이디는 - 를 제외한 군번입니다.</string>

</resources>
